# FastAPI-tutorial

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/api/routers/: done.py  task.py
app/api/schemas/: task.py
prisma/: schema.prisma
